# sysdir-rs

./: .clang-format  Cargo.toml  LICENSE-MIT  README.md  Rakefile  crates.js  deny.toml  help.html  package-lock.json  package.json  search-index.js  settings.html  source-files.js  src-files.js  sysdir.3.man
.github/: labels.yaml
.github/workflows/: audit.yaml  ci.yaml  rustdoc.yaml
cext/: sysdir.h
examples/: enumerate_system_dirs.rs
implementors/core/clone/: trait.Clone.js
search.desc/sysdir/: sysdir-desc-0-.js
src/: lib.rs  mock.rs  sys.rs
src/sysdir/: lib.rs.html  sys.rs.html
sysdir/: all.html  constant.PATH_MAX.html  constant.SYSDIR_DOMAIN_MASK_ALL.html  constant.SYSDIR_DOMAIN_MASK_LOCAL.html  constant.SYSDIR_DOMAIN_MASK_NETWORK.html  constant.SYSDIR_DOMAIN_MASK_SYSTEM.html  constant.SYSDIR_DOMAIN_MASK_USER.html  enum.sysdir_search_path_directory_t.html  fn.sysdir_get_next_search_path_enumeration.html  fn.sysdir_start_search_path_enumeration.html  index.html  sidebar-items.js  struct.sysdir_search_path_enumeration_state.html  type.sysdir_search_path_domain_mask_t.html
sysdir/man/: index.html
sysdir/sys/: constant.PATH_MAX.html  constant.SYSDIR_DOMAIN_MASK_ALL.html  constant.SYSDIR_DOMAIN_MASK_LOCAL.html  constant.SYSDIR_DOMAIN_MASK_NETWORK.html  constant.SYSDIR_DOMAIN_MASK_SYSTEM.html  constant.SYSDIR_DOMAIN_MASK_USER.html  enum.sysdir_search_path_directory_t.html  fn.sysdir_get_next_search_path_enumeration.html  fn.sysdir_start_search_path_enumeration.html  struct.sysdir_search_path_enumeration_state.html  type.sysdir_search_path_domain_mask_t.html
(+26 files in other folders)
